// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThemeProvider can apply body theme to body 1`] = `
<body
  class=

      {
        --body-fontFamily: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        --body-fontSize: 14px;
        --body-fontWeight: 400;
        --body-mozOsxFontSmoothing: grayscale;
        --body-webkitFontSmoothing: antialiased;
        --color-body-background: black;
        --color-body-contentColor: white;
        --color-brand-background: #0078d4;
        --color-brand-borderColor: transparent;
        --color-brand-checked-background: #005a9e;
        --color-brand-checked-contentColor: #ffffff;
        --color-brand-checkedHovered-background: #005a9e;
        --color-brand-checkedHovered-contentColor: #ffffff;
        --color-brand-contentColor: #ffffff;
        --color-brand-disabled-background: #f3f2f1;
        --color-brand-disabled-borderColor: var(--color-brand-disabled-background);
        --color-brand-disabled-contentColor: #a19f9d;
        --color-brand-disabled-dividerColor: #c8c6c4;
        --color-brand-disabled-iconColor: var(--color-brand-disabled-contentColor);
        --color-brand-disabled-secondaryContentColor: var(--color-brand-disabled-contentColor);
        --color-brand-dividerColor: #ffffff;
        --color-brand-focused-background: var(--color-brand-background);
        --color-brand-focused-borderColor: var(--color-brand-borderColor);
        --color-brand-focused-contentColor: var(--color-brand-contentColor);
        --color-brand-focused-iconColor: var(--color-brand-iconColor);
        --color-brand-focused-secondaryContentColor: var(--color-brand-focused-contentColor);
        --color-brand-hovered-background: #106ebe;
        --color-brand-hovered-borderColor: var(--color-brand-borderColor);
        --color-brand-hovered-contentColor: #ffffff;
        --color-brand-hovered-secondaryContentColor: #ffffff;
        --color-brand-iconColor: #ffffff;
        --color-brand-pressed-background: #005a9e;
        --color-brand-pressed-borderColor: var(--color-brand-borderColor);
        --color-brand-pressed-contentColor: #ffffff;
        --color-brand-pressed-iconColor: var(--color-brand-iconColor);
        --color-brand-pressed-secondaryContentColor: #ffffff;
        --color-brand-secondaryContentColor: #ffffff;
      }
      {
        -moz-osx-font-smoothing: var(--body-mozOsxFontSmoothing);
        -webkit-font-smoothing: var(--body-webkitFontSmoothing);
        background: var(--color-body-background);
        color: var(--color-body-contentColor);
        font-family: var(--body-fontFamily);
        font-size: var(--body-fontSize);
        font-weight: var(--body-fontWeight);
      }
/>
`;

exports[`ThemeProvider can apply body theme to body 2`] = `
<div
  className=
      foo
      {
        --body-fontFamily: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        --body-fontSize: 14px;
        --body-fontWeight: 400;
        --body-mozOsxFontSmoothing: grayscale;
        --body-webkitFontSmoothing: antialiased;
        --color-body-background: black;
        --color-body-contentColor: white;
        --color-brand-background: #0078d4;
        --color-brand-borderColor: transparent;
        --color-brand-checked-background: #005a9e;
        --color-brand-checked-contentColor: #ffffff;
        --color-brand-checkedHovered-background: #005a9e;
        --color-brand-checkedHovered-contentColor: #ffffff;
        --color-brand-contentColor: #ffffff;
        --color-brand-disabled-background: #f3f2f1;
        --color-brand-disabled-borderColor: var(--color-brand-disabled-background);
        --color-brand-disabled-contentColor: #a19f9d;
        --color-brand-disabled-dividerColor: #c8c6c4;
        --color-brand-disabled-iconColor: var(--color-brand-disabled-contentColor);
        --color-brand-disabled-secondaryContentColor: var(--color-brand-disabled-contentColor);
        --color-brand-dividerColor: #ffffff;
        --color-brand-focused-background: var(--color-brand-background);
        --color-brand-focused-borderColor: var(--color-brand-borderColor);
        --color-brand-focused-contentColor: var(--color-brand-contentColor);
        --color-brand-focused-iconColor: var(--color-brand-iconColor);
        --color-brand-focused-secondaryContentColor: var(--color-brand-focused-contentColor);
        --color-brand-hovered-background: #106ebe;
        --color-brand-hovered-borderColor: var(--color-brand-borderColor);
        --color-brand-hovered-contentColor: #ffffff;
        --color-brand-hovered-secondaryContentColor: #ffffff;
        --color-brand-iconColor: #ffffff;
        --color-brand-pressed-background: #005a9e;
        --color-brand-pressed-borderColor: var(--color-brand-borderColor);
        --color-brand-pressed-contentColor: #ffffff;
        --color-brand-pressed-iconColor: var(--color-brand-iconColor);
        --color-brand-pressed-secondaryContentColor: #ffffff;
        --color-brand-secondaryContentColor: #ffffff;
      }
>
  app
</div>
`;

exports[`ThemeProvider can apply body theme to none 1`] = `
<div
  className=
      foo
      {
        --body-fontFamily: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        --body-fontSize: 14px;
        --body-fontWeight: 400;
        --body-mozOsxFontSmoothing: grayscale;
        --body-webkitFontSmoothing: antialiased;
        --color-body-background: black;
        --color-body-contentColor: white;
        --color-brand-background: #0078d4;
        --color-brand-borderColor: transparent;
        --color-brand-checked-background: #005a9e;
        --color-brand-checked-contentColor: #ffffff;
        --color-brand-checkedHovered-background: #005a9e;
        --color-brand-checkedHovered-contentColor: #ffffff;
        --color-brand-contentColor: #ffffff;
        --color-brand-disabled-background: #f3f2f1;
        --color-brand-disabled-borderColor: var(--color-brand-disabled-background);
        --color-brand-disabled-contentColor: #a19f9d;
        --color-brand-disabled-dividerColor: #c8c6c4;
        --color-brand-disabled-iconColor: var(--color-brand-disabled-contentColor);
        --color-brand-disabled-secondaryContentColor: var(--color-brand-disabled-contentColor);
        --color-brand-dividerColor: #ffffff;
        --color-brand-focused-background: var(--color-brand-background);
        --color-brand-focused-borderColor: var(--color-brand-borderColor);
        --color-brand-focused-contentColor: var(--color-brand-contentColor);
        --color-brand-focused-iconColor: var(--color-brand-iconColor);
        --color-brand-focused-secondaryContentColor: var(--color-brand-focused-contentColor);
        --color-brand-hovered-background: #106ebe;
        --color-brand-hovered-borderColor: var(--color-brand-borderColor);
        --color-brand-hovered-contentColor: #ffffff;
        --color-brand-hovered-secondaryContentColor: #ffffff;
        --color-brand-iconColor: #ffffff;
        --color-brand-pressed-background: #005a9e;
        --color-brand-pressed-borderColor: var(--color-brand-borderColor);
        --color-brand-pressed-contentColor: #ffffff;
        --color-brand-pressed-iconColor: var(--color-brand-iconColor);
        --color-brand-pressed-secondaryContentColor: #ffffff;
        --color-brand-secondaryContentColor: #ffffff;
      }
>
  app
</div>
`;

exports[`ThemeProvider can handle a partial theme 1`] = `
<div
  className=

      {
        --body-fontFamily: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        --body-fontSize: 14px;
        --body-fontWeight: 400;
        --body-mozOsxFontSmoothing: grayscale;
        --body-webkitFontSmoothing: antialiased;
        --color-body-background: #ffffff;
        --color-body-contentColor: #323130;
        --color-brand-background: #0078d4;
        --color-brand-borderColor: transparent;
        --color-brand-checked-background: #005a9e;
        --color-brand-checked-contentColor: #ffffff;
        --color-brand-checkedHovered-background: #005a9e;
        --color-brand-checkedHovered-contentColor: #ffffff;
        --color-brand-contentColor: #ffffff;
        --color-brand-disabled-background: #f3f2f1;
        --color-brand-disabled-borderColor: var(--color-brand-disabled-background);
        --color-brand-disabled-contentColor: #a19f9d;
        --color-brand-disabled-dividerColor: #c8c6c4;
        --color-brand-disabled-iconColor: var(--color-brand-disabled-contentColor);
        --color-brand-disabled-secondaryContentColor: var(--color-brand-disabled-contentColor);
        --color-brand-dividerColor: #ffffff;
        --color-brand-focused-background: var(--color-brand-background);
        --color-brand-focused-borderColor: var(--color-brand-borderColor);
        --color-brand-focused-contentColor: var(--color-brand-contentColor);
        --color-brand-focused-iconColor: var(--color-brand-iconColor);
        --color-brand-focused-secondaryContentColor: var(--color-brand-focused-contentColor);
        --color-brand-hovered-background: #106ebe;
        --color-brand-hovered-borderColor: var(--color-brand-borderColor);
        --color-brand-hovered-contentColor: #ffffff;
        --color-brand-hovered-secondaryContentColor: #ffffff;
        --color-brand-iconColor: #ffffff;
        --color-brand-pressed-background: #005a9e;
        --color-brand-pressed-borderColor: var(--color-brand-borderColor);
        --color-brand-pressed-contentColor: #ffffff;
        --color-brand-pressed-iconColor: var(--color-brand-iconColor);
        --color-brand-pressed-secondaryContentColor: #ffffff;
        --color-brand-secondaryContentColor: #ffffff;
        --foo-background: red;
      }
      {
        -moz-osx-font-smoothing: var(--body-mozOsxFontSmoothing);
        -webkit-font-smoothing: var(--body-webkitFontSmoothing);
        background: var(--color-body-background);
        color: var(--color-body-contentColor);
        font-family: var(--body-fontFamily);
        font-size: var(--body-fontSize);
        font-weight: var(--body-fontWeight);
      }
>
  Hello
</div>
`;

exports[`ThemeProvider renders a div 1`] = `
<div
  className=

      {
        --body-fontFamily: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        --body-fontSize: 14px;
        --body-fontWeight: 400;
        --body-mozOsxFontSmoothing: grayscale;
        --body-webkitFontSmoothing: antialiased;
        --color-body-background: #ffffff;
        --color-body-contentColor: #323130;
        --color-brand-background: #0078d4;
        --color-brand-borderColor: transparent;
        --color-brand-checked-background: #005a9e;
        --color-brand-checked-contentColor: #ffffff;
        --color-brand-checkedHovered-background: #005a9e;
        --color-brand-checkedHovered-contentColor: #ffffff;
        --color-brand-contentColor: #ffffff;
        --color-brand-disabled-background: #f3f2f1;
        --color-brand-disabled-borderColor: var(--color-brand-disabled-background);
        --color-brand-disabled-contentColor: #a19f9d;
        --color-brand-disabled-dividerColor: #c8c6c4;
        --color-brand-disabled-iconColor: var(--color-brand-disabled-contentColor);
        --color-brand-disabled-secondaryContentColor: var(--color-brand-disabled-contentColor);
        --color-brand-dividerColor: #ffffff;
        --color-brand-focused-background: var(--color-brand-background);
        --color-brand-focused-borderColor: var(--color-brand-borderColor);
        --color-brand-focused-contentColor: var(--color-brand-contentColor);
        --color-brand-focused-iconColor: var(--color-brand-iconColor);
        --color-brand-focused-secondaryContentColor: var(--color-brand-focused-contentColor);
        --color-brand-hovered-background: #106ebe;
        --color-brand-hovered-borderColor: var(--color-brand-borderColor);
        --color-brand-hovered-contentColor: #ffffff;
        --color-brand-hovered-secondaryContentColor: #ffffff;
        --color-brand-iconColor: #ffffff;
        --color-brand-pressed-background: #005a9e;
        --color-brand-pressed-borderColor: var(--color-brand-borderColor);
        --color-brand-pressed-contentColor: #ffffff;
        --color-brand-pressed-iconColor: var(--color-brand-iconColor);
        --color-brand-pressed-secondaryContentColor: #ffffff;
        --color-brand-secondaryContentColor: #ffffff;
      }
      {
        -moz-osx-font-smoothing: var(--body-mozOsxFontSmoothing);
        -webkit-font-smoothing: var(--body-webkitFontSmoothing);
        background: var(--color-body-background);
        color: var(--color-body-contentColor);
        font-family: var(--body-fontFamily);
        font-size: var(--body-fontSize);
        font-weight: var(--body-fontWeight);
      }
>
  Hello
</div>
`;

exports[`ThemeProvider renders a div with styling 1`] = `
<div
  className=

      {
        --body-fontFamily: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        --body-fontSize: 14px;
        --body-fontWeight: 400;
        --body-mozOsxFontSmoothing: grayscale;
        --body-webkitFontSmoothing: antialiased;
        --color-body-background: white;
        --color-body-contentColor: black;
        --color-brand-background: #0078d4;
        --color-brand-borderColor: transparent;
        --color-brand-checked-background: #005a9e;
        --color-brand-checked-contentColor: #ffffff;
        --color-brand-checkedHovered-background: #005a9e;
        --color-brand-checkedHovered-contentColor: #ffffff;
        --color-brand-contentColor: #ffffff;
        --color-brand-disabled-background: #f3f2f1;
        --color-brand-disabled-borderColor: var(--color-brand-disabled-background);
        --color-brand-disabled-contentColor: #a19f9d;
        --color-brand-disabled-dividerColor: #c8c6c4;
        --color-brand-disabled-iconColor: var(--color-brand-disabled-contentColor);
        --color-brand-disabled-secondaryContentColor: var(--color-brand-disabled-contentColor);
        --color-brand-dividerColor: #ffffff;
        --color-brand-focused-background: var(--color-brand-background);
        --color-brand-focused-borderColor: var(--color-brand-borderColor);
        --color-brand-focused-contentColor: var(--color-brand-contentColor);
        --color-brand-focused-iconColor: var(--color-brand-iconColor);
        --color-brand-focused-secondaryContentColor: var(--color-brand-focused-contentColor);
        --color-brand-hovered-background: #106ebe;
        --color-brand-hovered-borderColor: var(--color-brand-borderColor);
        --color-brand-hovered-contentColor: #ffffff;
        --color-brand-hovered-secondaryContentColor: #ffffff;
        --color-brand-iconColor: #ffffff;
        --color-brand-pressed-background: #005a9e;
        --color-brand-pressed-borderColor: var(--color-brand-borderColor);
        --color-brand-pressed-contentColor: #ffffff;
        --color-brand-pressed-iconColor: var(--color-brand-iconColor);
        --color-brand-pressed-secondaryContentColor: #ffffff;
        --color-brand-secondaryContentColor: #ffffff;
      }
      {
        -moz-osx-font-smoothing: var(--body-mozOsxFontSmoothing);
        -webkit-font-smoothing: var(--body-webkitFontSmoothing);
        background: var(--color-body-background);
        color: var(--color-body-contentColor);
        font-family: var(--body-fontFamily);
        font-size: var(--body-fontSize);
        font-weight: var(--body-fontWeight);
      }
>
  Hello
</div>
`;

exports[`ThemeProvider renders nested themes 1`] = `
<div
  className=

      {
        --body-fontFamily: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        --body-fontSize: 14px;
        --body-fontWeight: 400;
        --body-mozOsxFontSmoothing: grayscale;
        --body-webkitFontSmoothing: antialiased;
        --color-body-background: white;
        --color-body-contentColor: black;
        --color-brand-background: #0078d4;
        --color-brand-borderColor: transparent;
        --color-brand-checked-background: #005a9e;
        --color-brand-checked-contentColor: #ffffff;
        --color-brand-checkedHovered-background: #005a9e;
        --color-brand-checkedHovered-contentColor: #ffffff;
        --color-brand-contentColor: #ffffff;
        --color-brand-disabled-background: #f3f2f1;
        --color-brand-disabled-borderColor: var(--color-brand-disabled-background);
        --color-brand-disabled-contentColor: #a19f9d;
        --color-brand-disabled-dividerColor: #c8c6c4;
        --color-brand-disabled-iconColor: var(--color-brand-disabled-contentColor);
        --color-brand-disabled-secondaryContentColor: var(--color-brand-disabled-contentColor);
        --color-brand-dividerColor: #ffffff;
        --color-brand-focused-background: var(--color-brand-background);
        --color-brand-focused-borderColor: var(--color-brand-borderColor);
        --color-brand-focused-contentColor: var(--color-brand-contentColor);
        --color-brand-focused-iconColor: var(--color-brand-iconColor);
        --color-brand-focused-secondaryContentColor: var(--color-brand-focused-contentColor);
        --color-brand-hovered-background: #106ebe;
        --color-brand-hovered-borderColor: var(--color-brand-borderColor);
        --color-brand-hovered-contentColor: #ffffff;
        --color-brand-hovered-secondaryContentColor: #ffffff;
        --color-brand-iconColor: #ffffff;
        --color-brand-pressed-background: #005a9e;
        --color-brand-pressed-borderColor: var(--color-brand-borderColor);
        --color-brand-pressed-contentColor: #ffffff;
        --color-brand-pressed-iconColor: var(--color-brand-iconColor);
        --color-brand-pressed-secondaryContentColor: #ffffff;
        --color-brand-secondaryContentColor: #ffffff;
      }
      {
        -moz-osx-font-smoothing: var(--body-mozOsxFontSmoothing);
        -webkit-font-smoothing: var(--body-webkitFontSmoothing);
        background: var(--color-body-background);
        color: var(--color-body-contentColor);
        font-family: var(--body-fontFamily);
        font-size: var(--body-fontSize);
        font-weight: var(--body-fontWeight);
      }
>
  <div>
    Light theme
  </div>
  <div
    className=

        {
          --body-fontFamily: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          --body-fontSize: 14px;
          --body-fontWeight: 400;
          --body-mozOsxFontSmoothing: grayscale;
          --body-webkitFontSmoothing: antialiased;
          --color-body-background: black;
          --color-body-contentColor: white;
          --color-brand-background: #0078d4;
          --color-brand-borderColor: transparent;
          --color-brand-checked-background: #005a9e;
          --color-brand-checked-contentColor: #ffffff;
          --color-brand-checkedHovered-background: #005a9e;
          --color-brand-checkedHovered-contentColor: #ffffff;
          --color-brand-contentColor: #ffffff;
          --color-brand-disabled-background: #f3f2f1;
          --color-brand-disabled-borderColor: var(--color-brand-disabled-background);
          --color-brand-disabled-contentColor: #a19f9d;
          --color-brand-disabled-dividerColor: #c8c6c4;
          --color-brand-disabled-iconColor: var(--color-brand-disabled-contentColor);
          --color-brand-disabled-secondaryContentColor: var(--color-brand-disabled-contentColor);
          --color-brand-dividerColor: #ffffff;
          --color-brand-focused-background: var(--color-brand-background);
          --color-brand-focused-borderColor: var(--color-brand-borderColor);
          --color-brand-focused-contentColor: var(--color-brand-contentColor);
          --color-brand-focused-iconColor: var(--color-brand-iconColor);
          --color-brand-focused-secondaryContentColor: var(--color-brand-focused-contentColor);
          --color-brand-hovered-background: #106ebe;
          --color-brand-hovered-borderColor: var(--color-brand-borderColor);
          --color-brand-hovered-contentColor: #ffffff;
          --color-brand-hovered-secondaryContentColor: #ffffff;
          --color-brand-iconColor: #ffffff;
          --color-brand-pressed-background: #005a9e;
          --color-brand-pressed-borderColor: var(--color-brand-borderColor);
          --color-brand-pressed-contentColor: #ffffff;
          --color-brand-pressed-iconColor: var(--color-brand-iconColor);
          --color-brand-pressed-secondaryContentColor: #ffffff;
          --color-brand-secondaryContentColor: #ffffff;
        }
        {
          -moz-osx-font-smoothing: var(--body-mozOsxFontSmoothing);
          -webkit-font-smoothing: var(--body-webkitFontSmoothing);
          background: var(--color-body-background);
          color: var(--color-body-contentColor);
          font-family: var(--body-fontFamily);
          font-size: var(--body-fontSize);
          font-weight: var(--body-fontWeight);
        }
  >
    <div>
      Dark theme
    </div>
  </div>
</div>
`;
